public class FriendlyNPC extends NPC {
    public FriendlyNPC(String name,boolean isFriendly) {
        super(name,true);
    }
    void offerHelp(){

    }
}
